--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -104,7 +104,7 @@ layout: default
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
                             <a href="{{ site.baseurl }}/about">
-                                <img src="{{site.sidebar-avatar}}"/>
+                                <img src="{{site.sidebar-avatar}}" style="img:hover{background:#555};"/>
                             </a>
                         {% endif %}
                         {% if site.sidebar-about-description %}
